--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.562.0",
+    "motion": "^12.23.26",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.10.1"
