Add room card and footer
Add room card detail and footer, the detail page query params still hard coded

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "capsule-hotel",
   "private": true,
   "type": "module",
+  "author": "Akbar fahreza",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
